--- a/iec-rice/sections/aa-annex-a.adoc
+++ b/iec-rice/sections/aa-annex-a.adoc
@@ -56,7 +56,7 @@ All parts of kernels which get stuck in the perforations of a sieve should be co
 
 [[figureA-1]]
 .Split-it-right sample divider
-image::images/a1.png[]
+image::a1.png[]
 
 === Determination
 
