--- a/international-standard/sections/a2-annex.adoc
+++ b/international-standard/sections/a2-annex.adoc
@@ -1,4 +1,5 @@
 
+// If no obligation value is set, the annex is presumed to be normative
 [[annex-2]]
 [appendix,obligation="informative"]
 == Annex Two
