--- a/README.adoc
+++ b/README.adoc
@@ -1,8 +1,7 @@
 = IEC Metanorma Templates
 
-image:https://travis-ci.com/metanorma/mn-templates-iec.svg?branch=master["Build Status", link="https://travis-ci.com/metanorma/mn-templates-iec"]
-
-This GitHub repository contains templates for IEC documents.
+image:https://github.com/metanorma/mn-templates-iec/workflows/defaults/badge.svg["*nix Build Status", link="https://github.com/metanorma/mn-templates-iec/actions?query=workflow%3Adefaults"]
+image:https://github.com/metanorma/mn-templates-iec/workflows/windows/badge.svg["Windows Build Status", link="https://github.com/metanorma/mn-templates-iec/actions?query=workflow%3Awindows"]
 
 Note that the Apache license applies only to the template.
 Once a document has been created
