--- a/iev/sections/zz-references.adoc
+++ b/iev/sections/zz-references.adoc
@@ -1,7 +1,7 @@
+// Since the IEV is managed as a database, do not include a Bibliography. Instead, cite any informative reference in the terminological entry concerned.
 
+////
 [bibliography]
 == Bibliography
 
-* [[[ISO639-2,ISO 639-2]]], _Codes for the representation of names of languages -- Part 2: Alpha-3 code_
-
-* [[[ISO8601-1,ISO 8601-1]]], _Date and time -- Representations for information interchange -- Part 1: Basic rules_
+////
