--- a/iev/document.adoc
+++ b/iev/document.adoc
@@ -19,7 +19,7 @@
 :docsubstage: 00
 :comment: ### Do not edit technical-committee-*
 :technical-committee-type: TC
-:technical-committee-number: 14
+:technical-committee-number: 1
 :technical-committee: Terminology
 :comment: ### technical commmitee 2 is the body working "under the responsibility of" TC 1
 :technical-committee2-type: TC
@@ -43,3 +43,4 @@ include::sections/00-intro.adoc[]
 include::sections/01-scope.adoc[]
 include::sections/02-norm-refs.adoc[]
 include::sections/03-termsdef.adoc[]
+include::sections/zz-references.adoc[]
