--- a/iev/sections/00-intro.adoc
+++ b/iev/sections/00-intro.adoc
@@ -1,6 +1,7 @@
 
 :sectnums!:
 [[introduction]]
+[heading="Introduction"]
 == INTRODUCTION: Principles and rules followed
 
 === General
@@ -42,7 +43,7 @@ Section number:: 2 digits,
 Concept number:: 2 digits (01 to 99).
 
 ====
-131-13-22
+*131-13-22*
 ====
 
 === Letter symbols for quantities and units
