--- a/iev/sections/02-norm-refs.adoc
+++ b/iev/sections/02-norm-refs.adoc
@@ -2,5 +2,7 @@
 [bibliography]
 == Normative References
 
-// It is necessary to include the Normative references clause for conformity with the ISO/IEC Directives, Part 2. However, since the IEV is managed as a database, cite any normative reference in the terminological entry concerned. Do not add any normative references here.
+// It is necessary to include the Normative references clause for conformity with the ISO/IEC Directives, Part 2. However, since the IEV is managed as a database, cite any normative reference in the terminological entry concerned. UNLIKE the IEV advice, do add any normative reference in the terminological entry concerned; but they will not be rebdered.
+
+* [[[ISO5127,ISO 5127]]] _Information and documentation -- Foundation and vocabulary_
 
