--- a/iev/sections/03-termsdef.adoc
+++ b/iev/sections/03-termsdef.adoc
@@ -1,18 +1,17 @@
 
 // The requirements for IEV terminological entries are specified in the IEC Supplement to the ISO/IEC Directives, Annex SK.
-Further information can be found at www.iec.ch/standardsdev/resources/draftingpublications/writing_editing/directives/terms_definitions.htm
+// Further information can be found at www.iec.ch/standardsdev/resources/draftingpublications/writing_editing/directives/terms_definitions.htm
 
 
 [[terms]]
-[source=ISO8601-1]
 == Terms and definitions
 
-[[term-script]]
-=== English preferred term
+[[en-term-script]]
+=== English preferred term, <specific use> attributes
 
-admitted:[English admitted term]
+admitted:[English admitted term], <specific use> attributes
 
-deprecated:[English deprecated term]
+deprecated:[English deprecated term], <specific use> attributes
 
 definition written as a descriptive statement that can replace the term in context
 
@@ -20,11 +19,43 @@ non-verbal representation of the concept (e.g. mathematical formula or illustrat
 
 ====
 Information that illustrates the concept.
+====
 
 NOTE: Additional information, e.g. units, provisions relating to the use of the term.
 
 [.source]
 <<ISO5127,clause="3.1.6.02">>, Description of modification
+
+
+[[fr-term-script]]
+[language=fr]
+=== terme française privilégié, <utilisation spécifique> attributs
+
+admitted:[terme française toléré], <utilisation spécifique> attributs
+
+deprecated:[terme française déconseillé], <utilisation spécifique> attributs
+
+définition composée d'une seule phrase décrivant le concept et qui peut remplacer le terme dans son contexte
+
+représentation non verbale du concept (p.ex. formule mathématique ou illustration)
+
+====
+Informations qui illustrent le concept.
+====
+
+NOTE: Information supplémentaire, p.ex. unités, exigences relatives à l’utilisation du terme.
+
+[.source]
+<<ISO639-1>>, Description de la modification
+
+[language=de]
+[[de-term-script]]
+=== äquivalenter Begriff in zusätzlicher IEV-Sprache
+
+[language=ru]
+[[ru-term-script]]
+=== эквивалентный термин на дополнительном языке IEV
+
 
 
 ////
